Remove deactivate
